[package]
name = "imgui-dx11-renderer"
version = "0.12.0"
authors = ["Lukas Wirth <lukastw97@gmail.com>"]
edition = "2024"
description = "DirectX 11 renderer for the imgui crate"
homepage = "https://github.com/Veykril/imgui-dx11-renderer"
repository = "https://github.com/Veykril/imgui-dx11-renderer"
license = "MIT"
readme = "README.md"
categories = ["gui", "rendering"]

[dependencies]
imgui = "0.12"
windows = { version = ">=0.59, <=0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dxgi",
] }

[build-dependencies]
windows = { version = ">=0.59, <=0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D_Fxc",
] }

[dev-dependencies]
imgui = "0.12"
imgui-winit-support = "0.13"
windows = { version = ">=0.59, <=0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dxgi",
] }
winit = "0.30"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
